# ChangeLog for mail-filter/spmfilter
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header$

  31 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +spmfilter-0.4.2.ebuild:
  bump

  07 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru> spmfilter-9999.ebuild:
  drop keyword in 9999 live ebuild

  14 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru> +spmfilter-9999.ebuild:
  add live ebuild

*spmfilter-9999 ( 14 Apr 2010 )

  14 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +spmfilter-0.4.0.ebuild, +files/fail_is_not_found-cmake_list.patch,
  +files/fix-fopen.patch, +files/spmfilter, +files/spmfilter.conf,
  +metadata.xml:
  initial commit

*spmfilter-0.4.0 ( 14 Apr 2010 )